k8s/exam1-error-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx-error-here:1.14.2 # fix me to nginx:1.14.2
        ports:
        - containerPort: 80
