k8s/nginx-deployment-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        vno: v1 
    spec:
      containers:
      - name: nginx
        image: nginx:1.16 #更換image版本
        ports:
        - containerPort: 80
