k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx.${EXTERNAL_IP}.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
